--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My second git repo</title>
 </head>
 <body>
-    
+    <h1>My name is Erfath</h1>
+    <h2>Yes, i pushed code in github</h2>
 </body>
 </html>
