--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second git repo</title>
+    <link rel="stylesheet" href="newcss.css">
 </head>
 <body>
     <h1>My name is Erfath</h1>
     <h2>Yes, i pushed code in github</h2>
+    <p>i have to work hard</p>
+    <p>i know, can do it</p>
 </body>
 </html>
