--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h2>Yes, i pushed code in github</h2>
     <p>i have to work hard</p>
     <p>i know, can do it</p>
+    <img src="sun.jpg" alt="">
 </body>
 </html>
