--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>i have to work hard</p>
     <p>i know, can do it</p>
     <img src="sun.jpg" alt="">
+    <img src="mosque.jpg" alt="">
 </body>
 </html>
