--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h2>Yes, i pushed code in github</h2>
     <p>i have to work hard</p>
     <p>i know, can do it</p>
+    <h3>that's all my dear</h3>
     <img src="sun.jpg" alt="">
     <img src="mosque.jpg" alt="">
+   
 </body>
 </html>
